# unisong-proof-of-concept

./: .env  .gitignore  config.py  db.py  local.py  main.py  musicbrainz.py  pyproject.toml  requirements  requirements.txt
poc/: Album.py  LocalAlbum.py  LocalRelease.py  LocalTrack.py  Release.py  __init__.py
